<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Justaway</string>
    <string name="button_add">Add</string>
    <string name="button_apply">Apply</string>
    <string name="button_blocking">Blocked</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create_block">Block</string>
    <string name="button_destroy">Destroy</string>
    <string name="button_destroy_block">Unblock</string>
    <string name="button_destroy_retweet">Undo</string>
    <string name="button_edit_profile">Edit profile</string>
    <string name="button_follow">Follow</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_quote">Quote</string>
    <string name="button_report_spam">Report spam</string>
    <string name="button_retweet">Retweet</string>
    <string name="button_save">Save</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="button_yes">Yes</string>
    <string name="confirm_create_block">Do you want to block?</string>
    <string name="context_create_mute">Do you want to mute [%s]?</string>
    <string name="confirm_create_streaming">Do you want to connect to the streaming?</string>
    <string name="confirm_destroy_block">Do you want to unblock?</string>
    <string name="confirm_destroy_mute">Do you want to undo mute [%s]?</string>
    <string name="confirm_destroy_retweet">Do you want to undo retweet?</string>
    <string name="confirm_destroy_streaming">Do you want to disconnect to the streaming?</string>
    <string name="confirm_destroy_user_list">Do you want to delete list?</string>
    <string name="confirm_destroy_user_list_subscribe">Do you want to unfollow list?</string>
    <string name="confirm_follow">Do you want to follow?</string>
    <string name="confirm_remove_account">Do you want to delete [%s]?</string>
    <string name="confirm_report_spam">Do you want to report spam?</string>
    <string name="confirm_retweet">Do you want to retweet?</string>
    <string name="confirm_save_draft">There is a tweet being edited. Do you want to save?</string>
    <string name="confirm_unfollow">Do you want to unfollow?</string>
    <string name="confirm_update_profile_image">Do you want to change profile image?</string>
    <string name="context_menu_create_favorite">Favorite</string>
    <string name="context_menu_destroy_direct_message">Delete message</string>
    <string name="context_menu_destroy_favorite">Undo favorite</string>
    <string name="context_menu_destroy_retweet">Undo retweet</string>
    <string name="context_menu_destroy_status">Delete this Tweet</string>
    <string name="context_menu_favorite_and_retweet">Favorite and Retweet</string>
    <string name="context_menu_mute">Mute %s</string>
    <string name="context_menu_photo_camera">Taking Photos</string>
    <string name="context_menu_photo_gallery">Attach an image</string>
    <string name="context_menu_qt">Quote</string>
    <string name="context_menu_reply">Reply</string>
    <string name="context_menu_reply_all">Reply to all</string>
    <string name="context_menu_reply_direct_message">Reply message</string>
    <string name="context_menu_retweet">Retweet</string>
    <string name="context_menu_share_url">Share</string>
    <string name="context_menu_show_around">View tweets around</string>
    <string name="context_menu_show_retweeters">Show the person who Retweet</string>
    <string name="context_menu_talk">View conversation</string>
    <string name="context_menu_title_photo_method">Image selection menu</string>
    <string name="description_icon">Profile Icon</string>
    <string name="format_user_created_at">\'Beginning Twitter: \'yyyy/MM/dd</string>
    <string name="label_bio">Bio</string>
    <string name="label_connect_with_twitter">Connect with Twitter</string>
    <string name="label_created_at">Beginning</string>
    <string name="label_favourites">FAVORITES</string>
    <string name="label_followed_by_target">FOLLOWS YOU</string>
    <string name="label_followers">FOLLOWERS</string>
    <string name="label_following">FOLLOWING</string>
    <string name="label_listed">LISTS</string>
    <string name="label_location">Location</string>
    <string name="label_name">Name</string>
    <string name="label_source">via</string>
    <string name="label_tweet_count">140</string>
    <string name="label_tweets">TWEETS</string>
    <string name="label_update_profile_image">Upload profile image</string>
    <string name="label_user">User</string>
    <string name="label_web_site">Web</string>
    <string name="label_word">Keyword</string>
    <string name="menu_account_setting">Accounts</string>
    <string name="menu_add_account">Add account</string>
    <string name="menu_battery_level">Battery level</string>
    <string name="menu_change_account">Account switching</string>
    <string name="menu_choose_user_list">Lists</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_create_block">Block</string>
    <string name="menu_create_mute_word">Add keyword</string>
    <string name="menu_create_user_list_subscription">Follow list</string>
    <string name="menu_destroy_user_list_subscription">Unfollow list</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_open_favstar">Open Favstar</string>
    <string name="menu_open_twilog">Open Twilog</string>
    <string name="menu_open_twitter">Open Twitter</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_report_spam">Report spam</string>
    <string name="menu_save_search">Save</string>
    <string name="menu_search">Search</string>
    <string name="menu_send_direct_messages">Send message</string>
    <string name="menu_send_reply">Send reply</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_store">Google Play</string>
    <string name="menu_website">Web</string>
    <string name="official_website">http://justaway.info/</string>
    <string name="profile_pointer">●　○</string>
    <string name="profile_pointer_right">○　●</string>
    <string name="progress_loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="progress_process" tools:ignore="TypographyEllipsis">Processing...</string>
    <string name="progress_sending" tools:ignore="TypographyEllipsis">Sending...</string>
    <string name="tab_users">User</string>
    <string name="title_account_setting">Account Settings</string>
    <string name="title_choose_user_lists">Select the list to display</string>
    <string name="title_create_mute_word">Enter the keyword</string>
    <string name="title_direct_messages">Direct message</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_interactions">Reply and notification</string>
    <string name="title_main">Home</string>
    <string name="title_mute">Mute Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_post">Tweet</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="toast_create_block_failure">You failed to block.</string>
    <string name="toast_create_block_success">You are blocking this user.</string>
    <string name="toast_create_mute">Added mute.</string>
    <string name="toast_create_streaming" tools:ignore="TypographyEllipsis">Connect streaming...</string>
    <string name="toast_create_user_list_subscription_failure">You are no longer following this list.</string>
    <string name="toast_create_user_list_subscription_success">You are now following this list.</string>
    <string name="toast_destroy_block_failure">You failed to undo blocking.</string>
    <string name="toast_destroy_block_success">You are now undo blocking this user.</string>
    <string name="toast_destroy_direct_message_failure">You are failed to delete message.</string>
    <string name="toast_destroy_direct_message_success">You are now delete message.</string>
    <string name="toast_destroy_favorite_already">You was undo the favorite.</string>
    <string name="toast_destroy_favorite_failure">You failed to undo the favorite.</string>
    <string name="toast_destroy_favorite_success">You are now undo the favorite.</string>
    <string name="toast_destroy_friendship_failure">You failed to unfollow.</string>
    <string name="toast_destroy_friendship_success">You are now unfollow this user.</string>
    <string name="toast_destroy_retweet_already">You was undo the retweet.</string>
    <string name="toast_destroy_retweet_failure">You failed to undo the retweet.</string>
    <string name="toast_destroy_retweet_progress">busy.</string>
    <string name="toast_destroy_retweet_success">You are now undo the retweet.</string>
    <string name="toast_destroy_status_failure">You failed to delete this tweet.</string>
    <string name="toast_destroy_status_success">You are now delete this tweet.</string>
    <string name="toast_destroy_streaming" tools:ignore="TypographyEllipsis">Disconnect streaming...</string>
    <string name="toast_destroy_success">removed.</string>
    <string name="toast_destroy_user_list_failure">You failed to delete this list.</string>
    <string name="toast_destroy_user_list_subscription_failure">You failed to unfollow this list.</string>
    <string name="toast_destroy_user_list_subscription_success">You are now unfollow this list.</string>
    <string name="toast_destroy_user_list_success">You are now delete this list.</string>
    <string name="toast_favorite_already">You was already a favorite.</string>
    <string name="toast_favorite_failure">You failed to favorite.</string>
    <string name="toast_favorite_success">You are now favorite this tweet.</string>
    <string name="toast_follow_failure">You failed to follow this user.</string>
    <string name="toast_follow_success">You are now follow this user.</string>
    <string name="toast_get_authorization_url_failure">twitter_consumer_key is invalid.</string>
    <string name="toast_load_data_failure">Failed to load.</string>
    <string name="toast_protected_tweet_can_not_share">You can not retweet this tweet.</string>
    <string name="toast_register_list_for_tab">List was added to our catalog on tab.</string>
    <string name="toast_report_spam_failure">Failed to report spam.</string>
    <string name="toast_report_spam_success">You are now report spam.</string>
    <string name="toast_retweet_already">You are </string>
    <string name="toast_retweet_failure">You have been retweet already.</string>
    <string name="toast_retweet_success">You are now retweet this tweet.</string>
    <string name="toast_save_image_success">Saved.</string>
    <string name="toast_save_success">Saved.</string>
    <string name="toast_set_image_failure">Failed.</string>
    <string name="toast_set_image_success">Set image.</string>
    <string name="toast_sign_in_failure">Failed to get access_token.</string>
    <string name="toast_sign_in_success">Success sign in.</string>
    <string name="toast_update_profile_failure">You failed to update profile.</string>
    <string name="toast_update_profile_image_failure">You failed to upload a profile image.</string>
    <string name="toast_update_profile_image_success">You are now upload a profile image.</string>
    <string name="toast_update_profile_success">Saved.</string>
    <string name="toast_update_status_already">You have been tweet already.</string>
    <string name="toast_update_status_failure">Failed.</string>
    <string name="twitter_callback_url">justaway://twitter</string>
    <string name="widget_title_post_mode">Post Only Mode</string>
    <string name="dialog_title_draft">Drafts</string>
    <string name="dialog_title_hashtag">Hashtags</string>
</resources>
