<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/send_reply"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_send_reply" />
    <item
        android:id="@+id/send_direct_messages"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_send_direct_messages" />
    <item
        android:id="@+id/open_twitter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_open_twitter" />
    <item
        android:id="@+id/open_favstar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_open_favstar" />
    <item
        android:id="@+id/open_twilog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_open_twilog" />

</menu>